[package]
name = "keyboard-config"
version = "1.1.0"
edition = "2021"
description = "Windows keyboard layout configuration tool"

[[bin]]
name = "keyboard-config"
path = "src/main.rs"

[dependencies]
winreg  = "0.52"
clap    = { version = "4", features = ["derive"] }
serde   = { version = "1", features = ["derive"] }
serde_json = "1"
chrono  = { version = "0.4", default-features = false, features = ["clock", "std"] }
regex   = "1"
anyhow  = "1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_UI_Shell",
    "Win32_System_Console",
] }

[build-dependencies]
embed-manifest = "1"

[profile.release]
opt-level = 3
lto       = true
strip     = true
